Un petit peu d'amour

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <img src="https://cdn.mycrazystuff.com/18071-large_default/doigt-d-honneur-solaire.jpg"/>
+    <img src="https://www.cnib.ca/sites/default/files/inline-images/heart-3147976_640_0.jpg"/>
 </body>
 
 </html>
